<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.category">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_extrabold"
                android:text="Categories"
                android:textColor="@color/blue"
                android:layout_marginLeft="5dp"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_below="@+id/textView5"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/graphic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/graphic_id"
                        android:text="@string/graphics"
                        android:textColor="@color/blue"
                        android:layout_marginLeft="5dp"
                        android:textSize="23sp"
                        android:fontFamily="@font/open_sans_bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/graphics_in"
                        android:textColor="@color/blue"
                        android:fontFamily="@font/open_sans"/>

                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blue"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/digitalmarket"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/marketing_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/digitalmarketing"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/blue"
                        android:textSize="23sp"
                        android:fontFamily="@font/open_sans_bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:layout_marginLeft="5dp"
                        android:text="@string/digitalmarketing_in"
                        android:fontFamily="@font/open_sans"/>

                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blue"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/writing"
                    android:layout_marginLeft="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/writing_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/writing"
                        android:textColor="@color/blue"
                        android:textSize="23sp"
                        android:fontFamily="@font/open_sans_bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:layout_marginLeft="5dp"
                        android:text="@string/writing_in"
                        android:fontFamily="@font/open_sans"/>

                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blue"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/video"
                    android:layout_marginLeft="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/video_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/video"
                        android:textColor="@color/blue"
                        android:textSize="23sp"
                        android:fontFamily="@font/open_sans_bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:layout_marginLeft="5dp"
                        android:text="@string/video_in"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/open_sans"/>

                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blue"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/music"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/music_id"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/music"
                        android:textColor="@color/blue"
                        android:textSize="23sp"
                        android:fontFamily="@font/open_sans_bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:layout_marginLeft="5dp"
                        android:text="@string/music_in"
                        android:fontFamily="@font/open_sans"/>

                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blue"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/programing"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/coding_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/programming"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/blue"
                        android:textSize="23sp"
                        android:fontFamily="@font/open_sans_bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/programming_in"
                        android:textColor="@color/blue"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/open_sans"/>

                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blue"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/data"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/data_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/data"
                        android:textColor="@color/blue"
                        android:textSize="23sp"
                        android:fontFamily="@font/open_sans_bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/data_in"
                        android:textColor="@color/blue"
                        android:fontFamily="@font/open_sans"/>

                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blue"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/business" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/business_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/business"
                        android:textColor="@color/blue"
                        android:textSize="23sp"
                        android:fontFamily="@font/open_sans_bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/business_in"
                        android:textColor="@color/blue"
                        android:fontFamily="@font/open_sans"/>

                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blue"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/lifestyle"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lifestyle_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lifestyle"
                        android:textColor="@color/blue"
                        android:textSize="23sp"
                        android:fontFamily="@font/open_sans_bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blue"
                        android:text="@string/lifestyle_in"
                        android:fontFamily="@font/open_sans"/>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>